--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "less-middleware": "~0.1.14",
     "mongojs": "^0.12.1",
     "async": "^0.7.0",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "moment": "^2.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
